Fix bottom border an selectors alignment

--- a/app/javascript/app/components/compare-ghg-chart/compare-ghg-chart-styles.scss
+++ b/app/javascript/app/components/compare-ghg-chart/compare-ghg-chart-styles.scss
@@ -7,6 +7,7 @@
 
   @media #{$tablet-landscape} {
     @include columns((2, 2, 2, 1, 3, 2));
+    align-items: flex-end;
   }
 }
 
